<resources>
    <string name="app_name">Terralysis</string>

    <string name="text_perlu_bantuan">Need Help?\nContact Us</string>

    <string name="splash_made_with">Made With Love by C23-P381</string>

    <!-- Sign In Page   -->
    <string name="signin_welcome_to">Welcome to</string>
    <string name="signin_welcome_message">Discover and identify soil types easily and accurately through image scanning</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <!-- Home Page   -->
    <string name="home_welcome_message">Welcome,\n%s</string>
    <string name="btn_about_app">How to\nGet Started?</string>
    <string name="home_start_scan">Start Scan\nHere!</string>

    <!-- About App   -->
    <string name="version_code">1.0.0</string>
    <string name="repo_link">https://github.com/Joviar27/Terralysis</string>
    <string name="our_repository">Our Repository</string>
    <string name="about_1">Terralysis is a soil identification application developed to provide users with an easy-to-use tool for accurately identifying soil types. By uploading a photo of a soil sample, users can quickly obtain detailed information about the soil type, including its physical and chemical characteristics. This information is crucial for selecting suitable plants, implementing effective cultivation techniques, and making data-driven decisions regarding fertilizer usage.</string>
    <string name="about_2">Terralysis aims to effectively increase agricultural productivity and maintain soil health by addressing the lack of expertise and knowledge in soil science in Indonesia. By harnessing technology, Terralysis empowers users to make informed decisions, ultimately contributing to food security and sustainable agriculture in Indonesia.</string>

    <!-- About Us  -->
    <string name="terralysis_team">Terralysis Team</string>

    <!-- Detail   -->
    <string name="cd_gambar_tanah">Soil Image</string>
    <string name="property">Property</string>
    <string name="physical_char">Physical Character</string>
    <string name="morphology_char">Morphology Character</string>
    <string name="chemical_char">Chemical Character</string>
    <string name="spread">Spread</string>
    <string name="label" translatable="false">%s (%s)</string>

    <!--  Signin and Signup  -->
    <string name="alamat_email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Name</string>

    <!-- Bottom bar   -->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_bantuan">Help</string>
    <string name="title_detail">Analysis Detail</string>
    <string name="title_about">About App</string>
    <string name="title_scan">Scan</string>
    <string name="title_guide">Guide</string>

    <!-- Profile  -->
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>

    <!--  Camera  -->
    <string name="failed_capture_message">Failed to capture image</string>
    <string name="failed_upload_message">Failed to analyze image</string>
    <string name="failed_gallery_message">Failed to pick image from gallery</string>
    <string name="process_message">Analyzing image…</string>
    <string name="chooser">Choose image</string>
    <string name="take_picture">Take picture</string>
    <string name="switch_camera">Switch camera</string>
    <string name="back">Back</string>
    <string name="upload_from_gallery">Upload image from Gallery</string>

    <!-- TextView Error   -->
    <string name="err_required">Required</string>
    <string name="err_invalid_email">Invalid email</string>
    <string name="err_invalid_pass_1">Minimum 8 characters</string>
    <string name="err_invalid_pass_2">Password should not contain spaces</string>

    <!-- Toast   -->
    <string name="signin_failed">Failed to sign in, please try again</string>
    <string name="signup_failed">Failed to create an account, please try again</string>
    <string name="signin_succcess">You have successfully signed in</string>
    <string name="signup_succcess">Account created successfully, please sign in</string>
    <string name="err_api_problem">Failed to update data</string>

    <!-- Help   -->
    <string name="name">Name\t:\t %s</string>
    <string name="email">Email\t:\t %s</string>

    <!-- Dialog  -->
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>

    <!-- Guide   -->
    <string name="title_1">Prepare the sample</string>
    <string name="title_2">Adjust the lighting</string>
    <string name="title_3">Pay attention to image quality</string>

    <string name="desc_1">Place the soil sample you want to analyze in a container. Avoid any other elements in the process of taking the soil sample image.</string>
    <string name="desc_2">Capture the soil sample image in a well-lit place to enhance the details of the captured soil sample image.</string>
    <string name="desc_3">Ensure that the captured image of the sample has good quality, avoid blurry or unfocused images.</string>

    <!-- content Description -->
    <string name="cdesc_logo_terralysis">Terralysis Logo</string>
    <string name="cdesc_submit_signup_form">Submit Sign Up Form</string>
    <string name="cdesc_submit_signin_form">Submit Sign In Form</string>
    <string name="cdesc_navigate_to_signup">Go to Sign Up Page</string>
    <string name="cdesc_navigate_to_signin">Go to Sign In Page</string>
    <string name="cdesc_photo_profile">Default Profile Picture</string>
    <string name="cdesc_carosale">carosale %s</string>
    <string name="cdesc_image_soil">Your Image of %s Soil</string>
    <string name="cdesc_prepare_sample">Soil in a container</string>
    <string name="cdesc_adjust_lighting">Soil with good lighting</string>
    <string name="cdesc_quality_image">Image of soil with good quality</string>
    <string name="cdesc_reload_history">Reload history</string>

    <!-- History -->
    <string name="empty_history">No scan history found,\nStart scanning now!</string>
    <string name="failed_load_history">Failed to load history. \nPlease try again</string>
    <string name="try_again">Try Again</string>

</resources>