<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.terralysis.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/layout_home">
        <action
            android:id="@+id/action_HomeFragment_to_CameraFragment"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.terralysis.ui.riwayat.RiwayatFragment"
        android:label="@string/title_history"
        tools:layout="@layout/layout_riwayat"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.terralysis.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/layout_profile_page">
        <action
            android:id="@+id/action_profileFragment_to_bantuanFragment"
            app:destination="@id/navigation_bantuan" />

        <action
            android:id="@+id/action_profileFragment_to_AboutFragment"
            app:destination="@id/navigation_about" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bantuan"
        android:name="com.example.terralysis.ui.bantuan.BantuanFragment"
        android:label="@string/title_bantuan"
        tools:layout="@layout/layout_bantuan_page" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.terralysis.ui.camera.CameraFragment"
        tools:layout="@layout/activity_camera">
        <action
            android:id="@+id/action_CameraFragment_to_DetailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.terralysis.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/layout_detail_page" />

    <fragment
        android:id="@+id/navigation_about"
        android:label="@string/title_about"
        android:name="com.example.terralysis.ui.about.AboutFragment"
        tools:layout="@layout/layout_about_app" />
</navigation>