<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_riwayat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/item_riwayat"/>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/empty_history" />
        <Button
            android:id="@+id/btn_refresh"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:text="@string/try_again"
            android:contentDescription="@string/cdesc_reload_history"/>
    </LinearLayout>
</FrameLayout>