<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_terralysis"
            android:src="@drawable/logo_terralysis"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_gravity="center_horizontal"
            android:text="@string/version_code"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="16dp"
            android:padding="16dp"
            android:background="@drawable/background_rounded12"
            android:backgroundTint="?attr/colorSurfaceVariant">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_aboutApp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:maxLines="12"
                tools:text="@tools:sample/lorem/random"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_aboutApp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:maxLines="12"
                tools:text="@tools:sample/lorem/random"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/background_rounded12"
            android:backgroundTint="?attr/colorSecondaryContainer">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_linkToRepo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:text="@string/our_repository"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_repo_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/link"
                android:clickable="true"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/repo_link"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
