<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_decorTop"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@color/primaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/home_welcome_message"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toStartOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/iv_decorTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
            tools:srcCompat="@tools:sample/avatars"/>

        <include
            android:id="@+id/btn_about_app"
            layout="@layout/btn_about_app"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_about_apps"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button_about_app"
            android:elevation="5dp"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/btn_about_app"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_rounded20"
            android:backgroundTint="@color/primary"
            android:drawableStart="@drawable/ic_baseline_document_scanner_24"
            android:elevation="4dp"
            android:paddingHorizontal="32dp"
            android:paddingVertical="24dp"
            android:text="@string/home_start_scan"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="@color/design_default_color_on_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_about_apps" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_riwayat"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_scan"
            tools:listitem="@layout/item_carousel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
